--- a/client/src/App.css
+++ b/client/src/App.css
@@ -118,7 +118,6 @@
    overflow-y: scroll;
 }
 
-// postions
 .position-relative {
    position: relative;
 }
@@ -153,4 +152,32 @@
 }
 .cursor-move {
    cursor: move;
+}
+
+.h-100vh {
+   height: 100vh;
+}
+.h-100 {
+   height: 100% !important;
+}
+
+.w-100 {
+   width: 100%;
+}
+
+.p-32 {
+   padding: 32px;
+}
+.p-36 {
+   padding: 36px;
+}
+
+.p-8 {
+   padding: 8px;
+}
+
+/* Background */
+
+.bg-light-gray {
+   background: #e9ecef;
 }
